--- a/Module2-assignment/index.html
+++ b/Module2-assignment/index.html
@@ -4,7 +4,7 @@
 
 <title>Module2 Assignment</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" type="text/css" href="style.css">
+<link rel="styles" type="text/css" href="../Module2-assignment/styles.css">
 
 </head>
 <body>
@@ -15,14 +15,14 @@
   <div class="col-lg-4 col-md-6 col-sm-12">
   	<div class="box">
   		<p class="content-name name1">Biscuit</p>
-  		<p class="content">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim.</p>
+  		<p class="content">we provide the best ever biscuilts available with high class quality and deliciously best.We use imported quality favourites to give it an authentic flavour.We have a wide range of flavours which are perfectly mixed by our best ever experts with handpicked seeds .So , why delay order and find yourself in the world of tasty snack.  </p>
   	</div>
   </div>
 
   <div class="col-lg-4 col-md-6 col-sm-12">
   	<div class="box">
-   		<p class="content-name name2">Salad</p>
-   		<p class="content">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim.</p>
+   		<p class="content-name name2">Fruit Salad</p>
+   		<p class="content">Intersted in refreshing yourself with natural refreshing agents. Yes you are on the right path on nourishing your body. Fruits provide you all the necessary suppliments required so take a look at the variety combinations of the fresh fruits, else make your own bowl and place an order </p>
   	</div>
   </div>
 
