--- a/Module2-assignment/index.html
+++ b/Module2-assignment/index.html
@@ -4,7 +4,7 @@
 
 <title>Module2 Assignment</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="styles" type="text/css" href="../Module2-assignment/styles.css">
+<link rel='stylesheet' type='text/css' href='css/styles.css'>
 
 </head>
 <body>
