My assignment done

--- a/Module2-assignment/index.html
+++ b/Module2-assignment/index.html
@@ -21,8 +21,8 @@
 
   <div class="col-lg-4 col-md-6 col-sm-12">
   	<div class="box">
-   		<p class="content-name name2">Fruit Salad</p>
-   		<p class="content">Intersted in refreshing yourself with natural refreshing agents. Yes you are on the right path on nourishing your body. Fruits provide you all the necessary suppliments required so take a look at the variety combinations of the fresh fruits, else make your own bowl and place an order </p>
+   		<p class="content-name name2">Salad</p>
+   		<p class="content">Intersted in refreshing yourself with natural refreshing agents. Yes you are on the right path on nourishing your body. Fruits provide you all the necessary suppliments required so take a look at the variety combinations of the fresh fruits, else make your own bowl and place an order and enjoy your dish Have a nice day ;) </p>
   	</div>
   </div>
 
