Module2 assignment done

--- a/Module2-assignment/index.html
+++ b/Module2-assignment/index.html
@@ -29,7 +29,7 @@
   <div class="col-lg-4 col-md-12 col-sm-12">
   	<div class="box">
   		<p class="content-name name3">Chocolate</p>
-  		<p class="content">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim.</p>
+  		<p class="content">Chocolate is an favourite for all. I wonder if there's someone who doesn't love chocloate.Yes here we are for the finding love.We have all kinds of chocolates for you chocolate lovers.Just explore our menu of lovely chocolates, for those sweet souls we have sweetest and also have 100% chocolates for bitter chocolate lovers.</p>
   	</div>	
   </div>
 
