--- a/Module3-assignment/index.html
+++ b/Module3-assignment/index.html
@@ -27,6 +27,23 @@
           </button>
       </div>
 
+       <div id="collapsable-nav" class="collapse navbar-collapse">
+           <ul id="nav-list" class="nav navbar-nav navbar-right">
+            <li>
+              <a href="menu-categories.html">
+                <span class="glyphicon glyphicon-apple"></span><br class="hidden-xs"> APPLE </a>
+            </li>
+            <li>
+              <a href="#">
+                <span class="glyphicon glyphicon-leaf"></span><br class="hidden-xs"> MANGO </a>
+            </li>
+            <li>
+              <a href="#">
+                <span class="glyphicon glyphicon-tree-deciduous"></span><br class="hidden-xs"> GUAVA </a>
+            </li>
+          </ul><!-- #nav-list -->
+        </div><!-- .collapse .navbar-collapse -->
+
       <div id="collapsable-nav" class="collapse navbar-collapse">
            <ul id="nav-list" class="nav navbar-nav navbar-right visible-xs">
             <li><a href="#Apple">APPLE</a></li>
