--- a/Module4-assignment/index.html
+++ b/Module4-assignment/index.html
@@ -6,8 +6,24 @@
   <script src="SpeakHello.js"></script>
   <script src="SpeakGoodBye.js"></script>
   <script src="script.js"></script>
+  <style>
+  	body {
+  		background-color: #F08080; }
+  	
+  		h1 {
+  			color: white;
+  			text-align: center;
+  		}
+  		h2{
+  			color : black;
+  			font-family: Comic Sans MS;
+  			text-align: center;
+  		}
+  	
+  </style>
 </head>
 <body>
-  <h1>Module 4 Solution Starter</h1>
+  <h1 > Module 4 Solution</h1>
+  <h2>Right click -> Inspect -> Console -> My output </h2>
 </body>
 </html>
